docs: check if JSDoc is in the node or in the signature when generating the API Reference

--- a/docs/assets/css/components.css
+++ b/docs/assets/css/components.css
@@ -520,12 +520,13 @@ preview-component {
 //////////////////////////////////////////////////////////////////////////////*/
 
 table {
-    width: 100%;
+    width: auto;
     background-color: var(--color-background);
     border-collapse: collapse;
     table-layout: fixed;
     border-spacing: 0;
     border-radius: var(--border-radius);
+    border: 1px solid var(--color-border);
 
     th, tbody, tr, th, td {
         border-radius: var(--border-radius);
