--- a/docs/overview.njk
+++ b/docs/overview.njk
@@ -17,7 +17,7 @@ module: overview
         What this library does?
     </h2>
 
-    <p class="text-md">
+    <p class="text text-md">
         This library reflects a simplified version of the TypeScript AST.
     </p>
 </section>
@@ -27,7 +27,7 @@ module: overview
         How does it benefit me?
     </h2>
 
-    <p class="text-md">
+    <p class="text text-md">
         This can help you automate the generation of a documentation website for any project you're working on.
         There are a lot of libraries out there that help you create static documentation websites from markdown files:
     </p>
@@ -54,9 +54,14 @@ module: overview
         </li>
     </ul>
 
-    <p class="text-md">
+    <p class="text text-md">
         This library can help you automate the generation of the markdown files that
         explain the public API of your project.
+    </p>
+
+    <p class="text text-md mt-4">
+        The entire <a class="prose" href="{{ '/api-reference/' | url }}">API Reference</a>
+        has been generated using the own library.
     </p>
 </section>
 
@@ -65,13 +70,13 @@ module: overview
         An Example:
     </h2>
 
-    <p class="text-md">
+    <p class="text text-md">
         The following example shows the information you can get from a TypeScript function.
     </p>
 
     <preview-component src="function.ts"></preview-component>
 
-    <p class="text-md my-2">
+    <p class="text text-md my-2">
         For more examples, have a look at the
         <a
             target="_blank"
