--- a/scripts/docs/type-alias.hbs
+++ b/scripts/docs/type-alias.hbs
@@ -27,7 +27,7 @@
 </div>
 
 {{#if this.description}}
-<section class="border-t pt-6 mb-10">
+<section class="pt-6 mb-10">
     <h2 class="heading-3">
         Description
     </h2>
@@ -38,7 +38,7 @@
 </section>
 {{/if}}
 
-<section class="border-t pt-6 mb-10">
+<section class="pt-6 mb-10">
     <h2 class="heading-3">
         Value
     </h2>
