docs: document interfaces in the API Reference

--- a/scripts/docs/type-alias.hbs
+++ b/scripts/docs/type-alias.hbs
@@ -44,6 +44,6 @@
     </h2>
 
     {% highlight "ts" %}
-    const {{ this.name }} = {{ this.value }}
+    type {{ this.name }} = {{ this.value }}
     {% endhighlight %}
 </section>
