--- a/scripts/docs/interface.hbs
+++ b/scripts/docs/interface.hbs
@@ -37,3 +37,94 @@
     </p>
 </section>
 {{/if}}
+
+{{#if this.properties.length}}
+<section class="pt-6 mb-10">
+    <h2 class="heading-3">
+        Properties
+    </h2>
+
+    <table class="table-standalone mt-4">
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Type</th>
+            <th>Description</th>
+        </tr>
+        </thead>
+
+        <tbody>
+            {{#each this.properties}}
+            <tr>
+                <td>{{this.name}}</td>
+                <td><code class="code code-accent">{{typeWithReference this.type}}</code></td>
+                <td>{{markdownToHTML this.description}}</td>
+            </tr>
+            {{/each}}
+        </tbody>
+    </table>
+</section>
+{{/if}}
+
+{{#if this.methods.length}}
+<section class="pt-6 mb-10">
+    <h2 class="heading-3">
+        Methods
+    </h2>
+
+    <ul class="flex flex-col mt-4 gap-6 w-full">
+        {{#each this.methods}}
+        <li class="block w-full rounded border pb-4">
+            <div class="flex items-center border-b bg-neutral-100 w-full px-4 py-2">
+                <h3 class="heading-4">
+                    {{this.name}}
+                </h3>
+
+                <a
+                    class="mis-auto text material-icons"
+                    target="_blank"
+                    href="\{{ github }}/{{ this.path }}#L{{ this.line }}"
+                >
+                    code
+                </a>
+            </div>
+
+            {{#if this.description}}
+            <p class="text px-4 mt-4">
+                {{markdownToHTML this.description}}
+            </p>
+            {{/if}}
+
+            {{#if this.signature}}
+            <div class="px-4 mt-4">
+                {% highlight "ts" %}
+                {{ this.signature }}
+                {% endhighlight %}
+            </div>
+            {{/if}}
+
+            {{#if this.parameters.length}}
+            <h4 class="heading-5 mt-4 mb-2 px-4">Parameters</h4>
+            <table class="mx-4">
+                <tbody>
+                {{#each this.parameters}}
+                    <tr>
+                        <td class="px-4 py-2 font-bold">{{ this.name }}</td>
+                        <td class="px-4 py-2">{{ typeWithReference this.type }}</td>
+                        <td class="px-4 py-2">{{markdownToHTML this.description }}</td>
+                    </tr>
+                {{/each}}
+                </tbody>
+            </table>
+            {{/if}}
+
+            <h4 class="heading-5 mt-4 mb-2 px-4">Returns</h4>
+            <div class="flex items-start gap-2 px-4">
+                <span class="shrink-0">{{typeWithReference this.returnType}}:</span>
+                <span class="text leading-relaxed">{{markdownToHTML this.returnType.description true}}</span>
+            </div>
+        </li>
+        {{/each}}
+    </ul>
+</section>
+{{/if}}
