--- a/docs/getting-started.njk
+++ b/docs/getting-started.njk
@@ -48,7 +48,20 @@ pnpm add -D @ts-ast-parser/core
     </h2>
 
     <p class="text-md mb-4">
-        You can provide the array of files that you would like to obtain information of:
+        If you have a TypeScript project with a TSConfig file:
+    </p>
+
+{% highlight "ts" %}
+import { parseFromProject } from '@ts-ast-parser/core';
+
+const reflectedModules = parseFromProject({
+    /* You can optionally specify the TSConfig file path */
+    tsConfigFilePath: '<path>',
+});
+{% endhighlight %}
+
+    <p class="text-md mb-4">
+        You can also provide the array of files:
     </p>
 
 {% highlight "ts" %}
@@ -68,7 +81,7 @@ const reflectedModules = parseFromGlob('**/*.ts');
 {% endhighlight %}
 
     <p class="text-md mb-4">
-        Finally, there is also support for getting information from a code snippet:
+        Finally, there is also support for code snippets:
     </p>
 
 {% highlight "ts" %}
