--- a/docs/overview.njk
+++ b/docs/overview.njk
@@ -50,7 +50,15 @@ module: overview
         </li>
 
         <li>
+            <a href="https://sveltepress.site/" class="prose" target="_blank">Sveltepress</a>
+        </li>
+
+        <li>
             <a href="https://modernjs.dev/doc-tools" class="prose" target="_blank">Modern.js Doc</a>
+        </li>
+
+        <li>
+            <a href="https://ng-doc.com/" class="prose" target="_blank">NgDoc</a>
         </li>
     </ul>
 
