--- a/scripts/docs/class.hbs
+++ b/scripts/docs/class.hbs
@@ -32,9 +32,9 @@
         Description
     </h2>
 
-    <p class="block text w-full mt-4">
-        {{markdownToHTML this.description }}
-    </p>
+    <div class="block text w-full mt-4">
+        {{markdownToHTML this.description}}
+    </div>
 </section>
 {{/if}}
 
@@ -62,9 +62,9 @@
             </div>
 
             {{#if this.description}}
-            <p class="text px-4 mt-4">
+            <div class="text px-4 mt-4">
                 {{markdownToHTML this.description}}
-            </p>
+            </div>
             {{/if}}
 
             {{#if this.signature}}
@@ -81,9 +81,9 @@
                 <tbody>
                     {{#each this.parameters}}
                     <tr>
-                        <td class="px-4 py-2 font-bold">{{ this.name }}</td>
-                        <td class="px-4 py-2">{{ typeWithReference this.type }}</td>
-                        <td class="px-4 py-2">{{markdownToHTML this.description }}</td>
+                        <td class="px-4 py-2 font-bold">{{this.name}}</td>
+                        <td class="px-4 py-2">{{ typeWithReference this.type}}</td>
+                        <td class="px-4 py-2">{{markdownToHTML this.description}}</td>
                     </tr>
                     {{/each}}
                 </tbody>
@@ -92,8 +92,8 @@
 
             <h4 class="heading-5 mt-4 mb-2 px-4">Returns</h4>
             <div class="flex items-start gap-2 px-4">
-                <span class="shrink-0">{{ typeWithReference this.returnType }}:</span>
-                <span class="text leading-relaxed">{{markdownToHTML this.returnType.description true}}</span>
+                <span class="shrink-0">{{typeWithReference this.returnType}}:</span>
+                <span class="text leading-relaxed">{{markdownToHTML this.returnType.description}}</span>
             </div>
         </li>
         {{/each}}
