--- a/scripts/docs/enum.hbs
+++ b/scripts/docs/enum.hbs
@@ -32,9 +32,9 @@
         Description
     </h2>
 
-    <p class="block text w-full mt-4">
+    <div class="block text w-full mt-4">
         {{markdownToHTML this.description }}
-    </p>
+    </div>
 </section>
 {{/if}}
 
