chore: remove tailwindcss-logical dependency

--- a/docs/_includes/macros/under-development-alert.njk
+++ b/docs/_includes/macros/under-development-alert.njk
@@ -1,6 +1,6 @@
 {% macro underDevelopmentAlert() %}
 <div class="alert alert-warning mb-6">
-    <span class="mie-4">🚧</span>
+    <span class="me-4">🚧</span>
     <span>Still under progress. Soon will be finished.</span>
 </div>
 {% endmacro %}
