--- a/docs/_includes/partials/_navigation.njk
+++ b/docs/_includes/partials/_navigation.njk
@@ -11,7 +11,7 @@
                 </a>
             </li>
 
-            <li class="flex items-center mis-auto mie-2">
+            <li class="flex items-center ms-auto me-2">
                 <a
                     class="github-link"
                     href="https://github.com/jordimarimon/ts-ast-parser"
@@ -30,7 +30,7 @@
             <li class="flex items-center">
                 <a class="btn" target="_blank" href="{{ '/playground/' | url }}" rel="noopener noreferrer">
                     <span>Playground</span>
-                    <span class="material-icons mis-2">open_in_new</span>
+                    <span class="material-icons ms-2">open_in_new</span>
                 </a>
             </li>
         </ul>
