--- a/docs/_includes/partials/_pagination.njk
+++ b/docs/_includes/partials/_pagination.njk
@@ -5,7 +5,7 @@
 <div class="pagination">
     {% if previousPost %}
         <a href="{{ previousPost.url | url }}" class="pagination__previous">
-            <span class="material-icons mie-auto">chevron_left</span>
+            <span class="material-icons me-auto">chevron_left</span>
             <span class="pagination__label truncate">{{ previousPost.data.title }}</span>
         </a>
     {% endif %}
@@ -13,7 +13,7 @@
     {% if nextPost %}
         <a href="{{ nextPost.url | url }}" class="pagination__next">
             <span class="pagination__label truncate">{{ nextPost.data.title }}</span>
-            <span class="material-icons mis-auto">chevron_right</span>
+            <span class="material-icons ms-auto">chevron_right</span>
         </a>
     {% endif %}
 </div>
