--- a/docs/_includes/partials/_side-bar.njk
+++ b/docs/_includes/partials/_side-bar.njk
@@ -1,6 +1,6 @@
 <aside id="side-bar" class="side-bar {% if not module %}md:hidden{% endif %}">
 
-    <button id="side-bar-close-btn" class="btn btn-icon-only mis-auto md:hidden">
+    <button id="side-bar-close-btn" class="btn btn-icon-only ms-auto md:hidden">
         <span class="material-icons">close</span>
     </button>
 
