--- a/docs/index.njk
+++ b/docs/index.njk
@@ -22,5 +22,5 @@ order: 1
     rel="noopener noreferrer"
 >
     <span>Playground</span>
-    <span class="material-icons mis-2">open_in_new</span>
+    <span class="material-icons ms-2">open_in_new</span>
 </a>
