--- a/docs/overview.njk
+++ b/docs/overview.njk
@@ -32,7 +32,7 @@ module: overview
         There are a lot of libraries out there that help you create static documentation websites from markdown files:
     </p>
 
-    <ul class="flex flex-col gap-2 list-disc pis-8 my-4">
+    <ul class="flex flex-col gap-2 list-disc ps-8 my-4">
         <li>
             <a href="https://docusaurus.io/" class="prose" target="_blank">Docusaurus</a>
         </li>
