--- a/docs/playground.njk
+++ b/docs/playground.njk
@@ -32,7 +32,7 @@ order: 2
     <div id="json-editor" class="hidden json-editor skeleton md:block"></div>
 
     <div class="fixed bottom-0 alert alert-warning alert-floating mb-6">
-        <span class="mie-4">🚧</span>
+        <span class="me-4">🚧</span>
         <span>Still under progress. Soon will be finished.</span>
     </div>
 
@@ -45,7 +45,7 @@ order: 2
                 Note
             </h3>
 
-            <button id="dialog-button-close" class="btn btn-icon-only mis-auto">
+            <button id="dialog-button-close" class="btn btn-icon-only ms-auto">
                 <span class="material-icons">close</span>
             </button>
         </header>
@@ -55,7 +55,7 @@ order: 2
         </p>
 
         <p class="flex items-center font-bold text-success mt-6 text-md md:text-lg">
-            <span class="material-icons mie-2">check_circle</span>
+            <span class="material-icons me-2">check_circle</span>
             <span>The following declarations will be reflected:</span>
         </p>
 
@@ -68,7 +68,7 @@ export const x = 3;
 {% endhighlight %}
 
         <p class="flex items-center font-bold mt-4 text-danger text-md md:text-lg">
-            <span class="material-icons mie-2">
+            <span class="material-icons me-2">
                 cancel
             </span>
             <span>The following declarations won't be reflected:</span>
